[gd_scene load_steps=3 format=3 uid="uid://bvgpjn58s2oj2"]

[ext_resource type="Script" uid="uid://cf4yvi7qve36n" path="res://scenes/ui/perks/perk_selection_item.gd" id="1_7vmci"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s45ql"]

[node name="PerkSelectionItem" type="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 250.0
offset_bottom = 441.0
script = ExtResource("1_7vmci")

[node name="IconPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="IconPanel"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_s45ql")
expand_mode = 1
stretch_mode = 4

[node name="TextPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="TextPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Description" type="Label" parent="TextPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="."]
layout_mode = 2
text = "Select"

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
